# StreamBlur-Pro

./: .gitignore  DEVLOG.md  LICENSE  README.md  start.ps1
.claude/: launch.json  settings.local.json
StreamBlur-Python-Core/: api_server.py  bridge_to_modular.py  bridge_to_src_modules.py  direct_bridge_to_your_modules.py  final_bridge_to_your_modules.py  requirements.txt  streamblur_pro_advanced.py  streamblur_server.py  wrapper_your_modules.py  your_logic_100.py
StreamBlur-Python-Core/src/: api_server.py  main.py
StreamBlur-Python-Core/src/core/: ai_processor.py  effects.py
streamblur-pro/: .gitignore  package-lock.json  package.json  tailwind.config.js
streamblur-pro/src/: App.css  App.tsx  index.css
streamblur-pro/src-tauri/: Cargo.toml  tauri.conf.json
streamblur-pro/src-tauri/src/: main.rs
streamblur-pro/src/components/: AISettings.tsx  BlurControl.tsx  CameraPreview.tsx  Header.tsx  MainControl.tsx  Performance.tsx
